# py-chess

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  LICENSE  README.md  bind.cpp  board.cpp  constants.h  constants.hpp  example.cpp  game_env.hpp  game_state.hpp  game_status.hpp  listener  lookup.h  lookup.hpp  main  main.cpp  main.py  move_gen.hpp  movegen.h  movegen.hpp  moves.h  moves.hpp  parse_san.hpp  parsesan.hpp  run_main  run_test  run_tests  setup.py  test.cpp  test.py  test_json.cpp  test_movegen.cpp  types.h  types.hpp  utils.hpp  zobrist.hpp
.cache/clangd/index/: bind_perf.cpp.D809AD55AAE4943B.idx  constants.hpp.1A25C8D539A00AE2.idx  game_env.hpp.35D89866DDF40CB0.idx  game_state.cpp.653DF4B27C32CC15.idx  game_state.hpp.A7551C6AF427DB69.idx  game_status.hpp.05453DF01685BED1.idx  json.hpp.CDC618717B8FA21D.idx  lookup.hpp.6FAAC424B4CAFC34.idx  move_gen.hpp.8D960591AF571F00.idx  moves.hpp.720B1CD92989819F.idx  parse_san.hpp.505B8ABF1C2B6BF4.idx  test_core.cpp.9DBE17B22640AFE5.idx  test_move_adapter.cpp.DF88C297BB2F0580.idx  test_movegen.cpp.136978C96EC2764A.idx  types.hpp.65BF6CF77074ACD0.idx  utils.hpp.8515BFCA61F099E9.idx  zobrist.hpp.BBC489D1318D3E6F.idx
bindings/: bind_perf.cpp
include/: game_env.hpp  game_rules.hpp  game_state.hpp  game_state_utils.hpp  game_status.hpp  lookup.hpp  move_gen.hpp  moves.hpp  observation.hpp  parse_san.hpp  types.hpp  utils.hpp  zobrist.hpp
python_dir/: errors.txt  offset_gen.py  test.py  test_early_termination.py  todo.md
src/: game_env.hpp  game_state.cpp  game_state.hpp  game_status.hpp  lookup.hpp  main.cpp  move_gen.hpp  moves.hpp  parse_san.hpp  perft.cpp  types.hpp  utils.hpp  zobrist.hpp
test/: generate_golden_master.cpp  test.cpp  test_core.cpp  test_golden.cpp  test_moveAdapter.cpp  test_movegen.cpp  test_movegen.hpp  test_termination.cpp
test/data/: castling.json  famous.json  promotions.json  standard.json  taxing.json
